[package]
name = "commentator"
version = "0.2.3"
edition = "2018"
license = "MIT"
repository = "https://github.com/g4s8/commentator"
description = "Source code comments extractor binary and SDK"

[dependencies]
unicode-segmentation = "1.9.0"
json = { version = "0.12.4", optional = true }
argparse = { version = "0.2.2", optional = true }

[features]
feat-bin = ["json", "argparse"]

[lib]
name = "commentator"
path = "src/lib.rs"

[[bin]]
name = "commentator"
path = "src/bin.rs"
required-features = ["feat-bin"]
